# LuxTTS

./: .gitignore  CLAUDE.md  README.md  SkyrimNet-LuxTTS.py  build_exe.py  pyproject.toml  requirements-server.txt  requirements.txt  run_api.ps1  skyrimnet_api.py
.claude/: settings.local.json
docs/plans/: tdr-nova.md
docs/specs/: 2026-04-03-vocalization-tags-design.md
docs/superpowers/plans/: 2026-04-03-vocalization-tags.md
speakers/: README.md
tests/: manual_vocalization_test.py  test_audio_utils.py  test_cache_utils.py  test_model_utils.py  test_pipeline.py  test_post_processor.py  test_vocalization.py
utilities/: __init__.py  app_config.py  app_constants.py  audio_generation_pipeline.py  audio_utils.py  cache_utils.py  model_utils.py  post_processor.py  tdr_nova_config.py
utilities/vocalization/: __init__.py  dsp_engine.py  recipes.json  recipes.py  stitcher.py  tag_parser.py  vocalization_generator.py
zipvoice/: modeling_utils.py  onnx_modeling.py
