[project]
name = "Zipvoice"
version = "0.0.11"
description = "Linacodec is a highly compressive and rapid audio tokenizer for audio models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cn2an",
  "huggingface-hub",
  "inflect",
  "jieba",
  "lhotse",
  "librosa",
  "linacodec",
  "numpy",
  "onnxruntime==1.20.1",
  "piper-phonemize",
  "pydub",
  "pypinyin",
  "safetensors",
  "setuptools<81",
  "tensorboard",
  "torch>=2.4.0",          # Move to modern Torch for CUDA 12.x support
  "torchaudio>=2.4.0",
  "transformers<=4.57.6",
  "vocos",
]

[project.optional-dependencies]
train = [
  "einops",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.uv]
find-links = [
  "https://k2-fsa.github.io/icefall/piper_phonemize.html",
  "https://k2-fsa.github.io/k2/cuda.html" # Add this for k2 CUDA wheels
]
[tool.uv.sources]
linacodec = { git = "https://github.com/ysharma3501/LinaCodec.git" }

[tool.uv.build-backend]
module-root = "" # The root module of the project

[tool.uv.extra-build-dependencies]
git = ["torch"]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
